[gd_scene load_steps=11 format=3 uid="uid://cctqwp087yiqk"]

[ext_resource type="Script" path="res://scripts/movement.gd" id="1_ighkb"]
[ext_resource type="Texture2D" uid="uid://bj8jadxg2ihtb" path="res://assets/MainCharacter/SC_V1_Idle.png" id="3_4jh0m"]
[ext_resource type="Script" path="res://scripts/hook_preview.gd" id="3_rohtp"]

[sub_resource type="GDScript" id="GDScript_e03ht"]
script/source = "extends RectangleShape2D
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_31lmm"]
size = Vector2(7, 22)
script = SubResource("GDScript_e03ht")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y3ek3"]
size = Vector2(8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5v32"]
atlas = ExtResource("3_4jh0m")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6vg3"]
atlas = ExtResource("3_4jh0m")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylrbf"]
atlas = ExtResource("3_4jh0m")
region = Rect2(32, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wsebd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5v32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6vg3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylrbf")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
input_pickable = true
script = ExtResource("1_ighkb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 5)
shape = SubResource("RectangleShape2D_31lmm")

[node name="Line2D" type="Line2D" parent="."]
width = 1.0
script = ExtResource("3_rohtp")

[node name="CollisionTest" type="CharacterBody2D" parent="Line2D"]
collision_layer = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Line2D/CollisionTest"]
light_mask = 4
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_y3ek3")

[node name="Centre" type="Marker2D" parent="."]

[node name="MoveLine" type="Line2D" parent="."]
width = 1.0
default_color = Color(1, 0, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wsebd")
autoplay = "default"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="on_user_drag" from="." to="Line2D" method="update_trajectory"]
[connection signal="on_user_start_drag" from="." to="Line2D" method="_show_line"]
[connection signal="on_user_stop_drag" from="." to="Line2D" method="_hide_line"]
